--- a/skythought/skythought_evals/tasks/aime/aime.yaml
+++ b/skythought/skythought_evals/tasks/aime/aime.yaml
@@ -6,3 +6,4 @@ answer_key: answer
 templating_parameters:
   regular_template:  "Return your final response within \\boxed{{}}. {prompt}"
   sky_template: "{prompt}\nReturn your final response within \\boxed{{}}" 
+  r1_template: "Please reason step by step, and put your final answer within \\boxed{{}}. {prompt}"
