--- a/skythought/skythought_evals/tasks/amc23/amc23.yaml
+++ b/skythought/skythought_evals/tasks/amc23/amc23.yaml
@@ -10,3 +10,4 @@ answer_key: answer
 #   difficulty: easy
 templating_parameters: 
   template: "Return your final response within \\boxed{{}}. {problem}"
+  r1_template: "Please reason step by step, and put your final answer within \\boxed{{}}. {prompt}"
