--- a/skythought/skythought_evals/tasks/olympiadbench/olympiadbench_math_en.yaml
+++ b/skythought/skythought_evals/tasks/olympiadbench/olympiadbench_math_en.yaml
@@ -5,4 +5,4 @@ dataset_split: train
 question_key: question
 answer_key: final_answer
 templating_parameters:
-  template: "Return your final response within \\boxed{{}}. {question}"
+  template: "{question}"
