--- a/skythought/skythought_evals/tasks/aime/aime.yaml
+++ b/skythought/skythought_evals/tasks/aime/aime.yaml
@@ -4,6 +4,6 @@ dataset_split: train
 question_key: problem
 answer_key: answer
 templating_parameters:
-  regular_template:  "Return your final response within \\boxed{{}}. {prompt}"
+  regular_template:  "{prompt}"
   sky_template: "{prompt}\nReturn your final response within \\boxed{{}}" 
   r1_template: "Please reason step by step, and put your final answer within \\boxed{{}}. {prompt}"
